Fix style of table header on Safari browser
ISSUE: CS-333

--- a/src/resources/css/packlink.css
+++ b/src/resources/css/packlink.css
@@ -39,7 +39,7 @@
 	background-color: #f5f5f5;
 	border-right: 1px solid #dcdcdc;
 	max-width: 250px;
-	width: 20%;
+	width: 17%;
 	height: 100%;
 }
 
@@ -291,6 +291,7 @@
 	font-weight: bold !important;
 	background-color: white;
 	position: sticky;
+	position: -webkit-sticky; /* Safari fallback */
 	top: 0;
 	z-index: 400;
 	vertical-align: middle !important;
